--- a/notebooks/hello.ipynb
+++ b/notebooks/hello.ipynb
@@ -128,7 +128,7 @@
    ],
    "source": [
     "%%scala\n",
-    "Console.withOut(System.out) { println($ctx.greeting) }"
+    "Console.withOut(System.out) { Console.withErr(System.err) { println($ctx.greeting) } }"
    ]
   },
   {
@@ -164,13 +164,13 @@
        "        <td>greeting</td><td>String</td><td>Hello, World</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@5baa7935</td>\n",
+       "        <td>kotlin.script.engine</td><td></td><td>kotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@7b57a479</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@78065fcd</td>\n",
+       "        <td>kotlin.script.state</td><td></td><td>org.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@3407aa4f</td>\n",
        "      </tr>\n",
        "      <tr>\n",
-       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@6212a4a8</td>\n",
+       "        <td>polyglot.context</td><td></td><td>org.graalvm.polyglot.Context@14554e6c</td>\n",
        "      </tr>\n",
        "    </tbody>\n",
        "  </table>\n",
@@ -178,9 +178,9 @@
       ],
       "text/plain": [
        "greeting\tString\tHello, World\n",
-       "kotlin.script.engine\t\tkotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@5baa7935\n",
-       "kotlin.script.state\t\torg.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@78065fcd\n",
-       "polyglot.context\t\torg.graalvm.polyglot.Context@6212a4a8\n",
+       "kotlin.script.engine\t\tkotlin.script.experimental.jvmhost.jsr223.KotlinJsr223ScriptEngineImpl@7b57a479\n",
+       "kotlin.script.state\t\torg.jetbrains.kotlin.cli.common.repl.AggregatedReplStageState@3407aa4f\n",
+       "polyglot.context\t\torg.graalvm.polyglot.Context@14554e6c\n",
        "\n"
       ]
      },
